--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="/gun.js"></script>
+    <script src="/sea.js"></script>
+    <script src="/webrtc.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
