--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="app"></div>
     <script src="/gun.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gun/lib/unset.js"></script>
     <script src="/sea.js"></script>
     <script src="/webrtc.js"></script>
     <script type="module" src="/src/main.ts"></script>
